@@ -1,8 +1,5 @@
 package com.sparta.spa_api.services;
 
-
-
-import com.sparta.spa_api.dtos.CourseMapper;
 import com.sparta.spa_api.dtos.StudentDTO;
 import com.sparta.spa_api.dtos.StudentMapper;
 import com.sparta.spa_api.entities.Course;
@@ -13,6 +10,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
 
 @Service
 public class StudentService {
@@ -21,68 +20,41 @@ public class StudentService {
     private final StudentMapper studentMapper;
     private final CourseRepository courseRepository;
 
-
-
-
     @Autowired
     public StudentService(StudentRepository studentRepository, StudentMapper studentMapper, CourseRepository courseRepository) {
-        if (studentRepository == null || studentMapper == null) {
-            throw new IllegalArgumentException("Repository and Mapper cannot be null");
+        if (studentRepository == null || studentMapper == null || courseRepository == null) {
+            throw new IllegalArgumentException("Repositories and Mapper cannot be null");
         }
-
         this.studentRepository = studentRepository;
         this.studentMapper = studentMapper;
         this.courseRepository = courseRepository;
-
-
     }
 
-    public List<StudentDTO> getAllStudents(){
-
-        return studentRepository.findAll().stream().map(studentMapper::toDTO).toList();
+    // Get all students
+    public List<StudentDTO> getAllStudents() {
+        return studentRepository.findAll()
+                .stream()
+                .map(studentMapper::toDTO)
+                .collect(Collectors.toList());
     }
 
-
-    public StudentDTO getStudentByID(int id) {
-        Student student = studentRepository.findById(id).orElse(null);
+    // Get student by ID
+    public StudentDTO getStudentById(Integer id) {
+        Student student = studentRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Student not found with ID " + id));
         return studentMapper.toDTO(student);
     }
 
-
-
-
-
-
-
-    public boolean deleteStudent(Integer id) {
-        if (studentRepository.existsById(id)) {
-            studentRepository.deleteById(id);
-            return true;
-        }
-        return false;
-    }
-
-
-
-    public StudentDTO updateStudent(Student student) {
-        if (studentRepository.existsById(student.getId())) {
-            return studentMapper.toDTO(studentRepository.save(student));
-        } else {
-            throw new IllegalArgumentException("Student with ID " + student.getId() + " does not exist.");
-        }
-
-    }
+    // Save a new student
     public StudentDTO saveStudent(StudentDTO studentDTO) {
+        Student student = new Student(); // using no-arg constructor
+        student.setStudentName(studentDTO.getStudentName());
+        student.setHasGraduated(studentDTO.isGraduated());
 
-        Student student = studentMapper.toEntity(studentDTO);
-
+        // set course if courseId is provided
         if (studentDTO.getCourseId() != null) {
             Course course = courseRepository.findById(studentDTO.getCourseId())
-                    .orElseThrow(() ->
-                            new IllegalArgumentException(
-                                    "Course not found with ID " + studentDTO.getCourseId()
-                            )
-                    );
+                    .orElseThrow(() -> new IllegalArgumentException("Course not found with ID " + studentDTO.getCourseId()));
             student.setCourse(course);
         }
 
@@ -90,17 +62,37 @@ public class StudentService {
         return studentMapper.toDTO(saved);
     }
 
-    public boolean hasGraduated(int id) {
-        Student student = studentRepository.findById(id).orElse(null);
-        return student.isHasGraduated();
+    // Update existing student
+    public StudentDTO updateStudent(Integer id, StudentDTO studentDTO) {
+        Student student = studentRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Student not found with ID " + id));
+
+        student.setStudentName(studentDTO.getStudentName());
+        student.setHasGraduated(studentDTO.isGraduated());
+
+        // update course if provided
+        if (studentDTO.getCourseId() != null) {
+            Course course = courseRepository.findById(studentDTO.getCourseId())
+                    .orElseThrow(() -> new IllegalArgumentException("Course not found with ID " + studentDTO.getCourseId()));
+            student.setCourse(course);
+        }
+
+        Student updated = studentRepository.save(student);
+        return studentMapper.toDTO(updated);
     }
 
+    // Delete student
+    public void deleteStudent(Integer id) {
+        if (!studentRepository.existsById(id)) {
+            throw new NoSuchElementException("Student not found with ID " + id);
+        }
+        studentRepository.deleteById(id);
+    }
 
-
-
-
-
-
-
-
+    // Check graduation status
+    public boolean hasGraduated(Integer id) {
+        Student student = studentRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Student not found with ID " + id));
+        return student.isHasGraduated();
+    }
 }
